style: 替换响应式变量

--- a/packages/buitar/src/components/basic/collection-selecter.module.scss
+++ b/packages/buitar/src/components/basic/collection-selecter.module.scss
@@ -4,9 +4,9 @@
 		outline: none;
 		border: none;
 		border-radius: 2px;
-		height: $button-size;
-		width: $button-size * 2px;
-		margin: $button-margin + px;
+		height: $btn-size;
+		width: calc($btn-size * 2);
+		margin: $btn-margin;
 		padding: 4px 10px;
 		color: $white-01;
 		font-size: 16px;
