--- a/packages/buitar/src/components/ui/range-slider.module.scss
+++ b/packages/buitar/src/components/ui/range-slider.module.scss
@@ -1,11 +1,11 @@
 .range-slider {
-	height: $button-size * 0.8px;
+	height: calc($btn-size * 0.8);
 	:global(.buitar-primary-range) {
-		width: $button-size * 4px;
+		width: calc($btn-size * 4);
 		border-radius: 2px;
         height: inherit;
 		&::-webkit-slider-thumb {
-			height: $button-size * 0.8px;
+			height: calc($btn-size * 0.8);
 			width: var(--thumb-width);
 			background: var(--thumb-color);
 			opacity: 0.4;
@@ -15,7 +15,7 @@
 		&:active::-webkit-slider-thumb {
 			width: var(--thumb-width);
 			transform: scaleY(1.1);
-			height: $button-size * 0.8px;
+			height: calc($btn-size * 0.8);
 			opacity: 1;
 		}
 	}
