--- a/packages/buitar/src/components/guitar-board/board-controller/chord-controller/chord-controller.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/chord-controller/chord-controller.module.scss
@@ -14,8 +14,8 @@
 	}
 
 	.fifth-circle {
-		height: $button-size * 6 + $button-margin * 4 + px !important;
-		min-width: $button-size * 6 + $button-margin * 4 + px !important;
+		height: calc($btn-size * 6  + $btn-margin * 4) !important;
+		min-width: calc($btn-size * 6  + $btn-margin * 4) !important;
 	}
 
 	.chord-controllers {
@@ -71,7 +71,7 @@
 }
 
 .chord-tab {
-	width: $button-size * 6px;
+	width: calc($btn-size * 6);
 }
 
 .chord-type {
@@ -80,8 +80,8 @@
 
 	.tags-item {
 		@include flex-center;
-		width: $button-size * 1.5px;
-		height: $button-size * 0.8px;
+		width: calc($btn-size * 1.5);
+		height: calc($btn-size * 0.8);
 		font-size: 14px;
 		font-weight: 500;
 		color: $white-02;
