--- a/packages/buitar/src/style/definitions/app.scss
+++ b/packages/buitar/src/style/definitions/app.scss
@@ -6,6 +6,10 @@ $gray-02: rgb(49, 53, 54);
 $gray-03: rgb(46, 49, 51);
 $gray-07: rgb(23, 25, 26);
 
+$white-01: rgb(232, 230, 227);
+$white-02: rgba(202, 201, 199, 0.911);
+$white-03: rgba(178, 178, 178, 0.911);
+
 $yellow-primary: rgb(199, 156, 15);
 $yellow-second: rgb(168, 131, 7);
 
@@ -21,19 +25,12 @@ $cyan-second: rgb(145, 145, 14);
 $purple-primary: rgb(209, 91, 47);
 $purple-second: rgb(189, 80, 41);
 
-$white-01: rgb(232, 230, 227);
-$white-02: rgba(202, 201, 199, 0.911);
-$white-03: rgba(178, 178, 178, 0.911);
-
 $button-size: 40;
 $button-margin: 2;
-$mobile-button-size: 32;
-$mobile-button-margin: 1.6;
-// $button-size-new: var(--button-size);
-// $button-size: var(--button-size);
-// $button-margin: var(--button-margin);
-// $mobile-button-size: var(--button-size);
-// $mobile-button-margin: var(--button-margin);
+
+$btn-size: var(--btn-size);
+$btn-margin: var(--btn-margin);
+$btn-radius: var(--btn-radius);
 
 // es module 使用
 :export {
