--- a/packages/buitar/src/components/ui/tab-switch.module.scss
+++ b/packages/buitar/src/components/ui/tab-switch.module.scss
@@ -1,7 +1,7 @@
-.switch {
+.tab-switch {
 	display: flex;
 	position: relative;
-	width: calc($btn-size * 3).2px;
+	width: calc($btn-size * 3.2);
 	height: calc($btn-size * 0.8);
 	border-radius: 4px;
 	margin: 2px;
