--- a/packages/buitar/src/style/definitions/app.scss
+++ b/packages/buitar/src/style/definitions/app.scss
@@ -32,6 +32,15 @@ $btn-size: var(--btn-size);
 $btn-margin: var(--btn-margin);
 $btn-radius: var(--btn-radius);
 
+$space-4: var(--space-4);
+$space-6: var(--space-6);
+$space-8: var(--space-8);
+$space-10: var(--space-10);
+$space-12: var(--space-12);
+$space-16: var(--space-16);
+$space-20: var(--space-20);
+$space-24: var(--space-24);
+
 $font-10: var(--font-10);
 $font-12: var(--font-12);
 $font-14: var(--font-14);
