--- a/packages/buitar/src/components/audio-btn/audio-btn.module.scss
+++ b/packages/buitar/src/components/audio-btn/audio-btn.module.scss
@@ -1,11 +1,12 @@
 .audio-btn {
 	position: fixed;
 	right: 20px;
-	bottom: 20px;
+	top: 20px;
 	width: 32px !important;
 	height: 32px !important;
-	border-radius: 16px !important;
-	box-shadow: 2px 2px 8px #444;
+	cursor: pointer;
+	// border-radius: 16px !important;
+	// box-shadow: 2px 2px 8px #444;
 	@include flex-center;
 }
 
