--- a/packages/buitar/src/components/guitar-board/board-controller/option-controller/option-controller.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/option-controller/option-controller.module.scss
@@ -10,8 +10,16 @@
 	display: flex;
 	flex-direction: column;
 	padding: 2px 6px;
+	font-size: $font-14;
+	&.controller-inner__small {
+		font-size: $font-12;
+	}
+	&.controller-inner__large {
+		font-size: $font-18;
+		font-weight: bold;
+	}
 	:last-child {
-		margin-top: 10px;
+		margin-top: $space-6;
 	}
 }
 
@@ -27,14 +35,15 @@
 			opacity: 0.8;
 		}
 	}
+
+	.controller-inner-intro {
+		font-size: $font-12;
+		margin-top: 4px;
+	}
+
 	@media #{$mobileLayout} {
 		.controller-inner-unchecked {
 			opacity: 0.8;
 		}
-	}
-
-	.controller-inner-intro {
-		font-size: 12px;
-		margin-top: 4px;
 	}
 }
