--- a/packages/buitar/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
@@ -140,18 +140,18 @@
 	height: 100%;
 	padding: 4px;
 	&-grade {
-		font-size: 12px;
+		font-size: $font-12;
 	}
 	&-note {
 		font-size: 24px;
-		line-height: 36px;
+		line-height: calc($font-12 * 2.8);
 	}
 	&-tag {
-		font-size: 14px;
+		font-size: $font-14;
 		opacity: 0.8;
 	}
 	&-name {
 		opacity: 0.8;
-		font-size: 12px;
+		font-size: $font-12;
 	}
 }
