--- a/packages/buitar/src/components/fifths-circle/fifths-circle.module.scss
+++ b/packages/buitar/src/components/fifths-circle/fifths-circle.module.scss
@@ -1,8 +1,10 @@
 .arc {
 	transition: stroke-dasharray 0.25s;
 	stroke: $gray-primary;
-	&:hover {
-		stroke: $yellow-primary;
+	@media (any-hover: hover) {
+		&:hover {
+			stroke: $yellow-primary;
+		}
 	}
 }
 
