--- a/packages/buitar/src/style/definitions/mixins.scss
+++ b/packages/buitar/src/style/definitions/mixins.scss
@@ -13,3 +13,13 @@
 		}
 	}
 }
+
+@mixin hover-effect($properties) {
+	@media (any-hover: hover) {
+		&:hover {
+			@each $property, $value in $properties {
+				#{$property}: $value;
+			}
+		}
+	}
+}
