--- a/packages/buitar/src/components/slide-menu/slide-item.module.scss
+++ b/packages/buitar/src/components/slide-menu/slide-item.module.scss
@@ -21,6 +21,7 @@ $side-width: 60px;
 
 		.slide-menu-tab {
 			width: $side-width * 5;
+			height: 100%;
 
 			@media #{$mobileLayout} {
 				padding-left: 20px;
