feat: 修改音序条播放设置

--- a/packages/buitar/src/components/basic/collection-selecter.module.scss
+++ b/packages/buitar/src/components/basic/collection-selecter.module.scss
@@ -5,7 +5,8 @@
 		border: none;
 		border-radius: 2px;
 		height: $btn-size;
-		width: calc($btn-size * 2);
+		min-width: calc($btn-size * 2);
+		width: -webkit-fill-available;
 		margin: $btn-margin;
 		padding: 4px 10px;
 		color: $white-01;
