--- a/packages/buitar/src/style/global.scss
+++ b/packages/buitar/src/style/global.scss
@@ -93,3 +93,15 @@
 	height: 100%;
 	width: 100%;
 }
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+
+	backdrop-filter: blur(10px);
+	background-color: rgba(0, 0, 0, 0.5);
+}
